--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.8.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "vue": "^3.2.13",
-    "vue-router": "^4.4.5"
+    "v-tooltip": "^2.1.3",
+    "vue": "^2.7.16",
+    "vue-router": "^3.6.5",
+    "vue-swing": "^0.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
