Fix branch name [skip ci]

--- a/.github/workflows/build-and-push-frontend-image.yaml
+++ b/.github/workflows/build-and-push-frontend-image.yaml
@@ -2,7 +2,7 @@ name: build-and-push-image
 on:
   push:
     branches-ignore:
-      - main
+      - master
 jobs:
   buildx-frontend:
     runs-on: ubuntu-latest
