--- a/.github/workflows/release-frontend.yaml
+++ b/.github/workflows/release-frontend.yaml
@@ -2,7 +2,7 @@ name: build-and-release-frontend
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   buildx-frontend:
     runs-on: ubuntu-latest
